<resources>
    <string name="app_name">COMP3074_Project11</string>
    <string name="lblPassword">Password:</string>
    <string name="btnLogIn">LOG IN</string>
    <string name="btnSignUp">SIGN UP</string>

    <string name="titleDashboard">Dashboard</string>
    <string name="lblSignAs">Signed in as:</string>
    <string name="btnSearch">Search</string>
    <string name="btnItineraries">Itineraries</string>
    <string name="btnProfile">My Profile</string>
    <string name="btnLogOut">Log Out</string>

    <string name="lblMyProfile">My Profile</string>
    <string name="btnEdit">Edit</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnSave">Save</string>
    <string name="btnDashboard">Dashboard</string>

    <string name="titleSignUp">Create Profile</string>
    <string name="lblFirstName">First Name:</string>
    <string name="lblLastName">Last Name:</string>
    <string name="lblEmail">Email:</string>
    <string name="lblCreditCardNo">Credit Card Number:</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="btnCancel">Cancel</string>

    <string name="titleConfirmation">Success!</string>
    <string name="confirmationMessage">Your flight has been successfully booked!</string>
    <string name="btnGoToItineraries">GO TO MY ITINERARIES</string>
    <string name="flightNo">Flight</string>
    <string name="to">To:</string>
    <string name="from">From:</string>

    <string name="titleItineraries">Itineraries</string>
    <string name="btnBackToHome">BACK TO HOME</string>
    <string name="noItineraries">There are no itineraries booked.</string>

    <string name="titleSearchResults">Search Results</string>

    <string name="titleSearch">Search</string>
    <string name="btnFlightSearch">SEARCH</string>

    <string name="titleFlightDetails">Flight Details</string>
    <string name="titlePaymentInfo">Payment Information</string>


</resources>
