<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:padding="16dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="161dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        app:srcCompat="@drawable/logo"
        android:layout_weight="0.05" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail"
            android:textColor="@color/colorLogin" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorLogin"
            android:textColor="@color/colorLogin" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            android:textColor="@color/colorLogin" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorLogin"
            android:textColor="@color/colorLogin" />
    </TableRow>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogIn"
        android:layout_marginTop="30dp"
        android:background="@color/colorBtnLogIn"
        android:onClick="onClickLogIn"/>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="@color/colorLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorBtnLogIn"
        android:text="@string/btnSignUp"
        android:onClick="onClickSignUp"/>

</LinearLayout>